--- a/public/index.html
+++ b/public/index.html
@@ -41,29 +41,12 @@
       </section>
 
       <!-- Поиск -->
-      <section class="main__search search container">
-
-      </section>
-
+      
       <!-- Фильтры -->
-      <section class="main__filter filter container">
-
-      </section>
-
+      
       <!-- Контент -->
-      <section class="board container">
-
-        <div class="board__filter-list">
-
-        </div>
-
-        <div class="board__tasks">
-
-        </div>
-
-      </section>
     </main>
 
-  <script src="../src/main.js"></script>
+  <script src="./bundle.js"></script>
   </body>
 </html>
